CORAL-0 List: fix item alignment
* remove dead code

--- a/coral-component-actionbar/src/styles/index.styl
+++ b/coral-component-actionbar/src/styles/index.styl
@@ -59,16 +59,7 @@ $actionbar-container-padding-right = 15px;
   right: $actionbar-container-padding-right;
 }
 
-// Expand list width based on content
-._coral-ActionBar-buttonList {
-  ._coral-BasicList-item-contentContainer {
-    width: auto;
-  }
-
-  button[is="coral-buttonlist-item"] {
-    display: flex;
-    width: 100%;
-    align-items: normal;
-    -webkit-font-smoothing: antialiased;
-  }
+._coral-ActionBar-buttonList button[is="coral-buttonlist-item"],
+._coral-ActionBar-anchorList a[is="coral-anchorlist-item"] {
+  -webkit-font-smoothing: antialiased;
 }
