--- a/coral-component-cyclebutton/src/styles/index.styl
+++ b/coral-component-cyclebutton/src/styles/index.styl
@@ -28,17 +28,6 @@ coral-cyclebutton-action {
   cursor: pointer;
 }
 
-// Expand list width based on content
-._coral-CycleSelect-buttonList {
-  ._coral-BasicList-item-contentContainer {
-    width: auto;
-  }
-
-  button[is="coral-buttonlist-item"] {
-    width: 100%;
-  }
-}
-
 ._coral-CycleSelect-icon {
   display: none;
   order: 1;
