--- a/coral-component-list/src/styles/index.styl
+++ b/coral-component-list/src/styles/index.styl
@@ -72,7 +72,7 @@ coral-selectlist-item-content {
 
   & > coral-icon:first-child {
     position: relative;
-    top: 3px;
+    top: 4px;
     margin-right: 8px;
   }
 }
@@ -98,6 +98,7 @@ coral-selectlist-item-content {
 ._coral-BasicList-item-icon {
   float: left;
 
+  margin-top: 1px;
   margin-right: 12px;
 
 // Hide if no icon
@@ -124,6 +125,7 @@ coral-selectlist-item-content {
   border-bottom: 0;
   border-right: 0;
   font-family: inherit;
+  line-height: inherit;
   border-radius: 0;
 }
 
