--- a/coral-component-quickactions/src/styles/index.styl
+++ b/coral-component-quickactions/src/styles/index.styl
@@ -39,15 +39,6 @@ coral-quickactions-item {
 // constrains the size of the list to 6 items 6x40=240
   max-height: 240px;
   overflow-y: auto;
-
-// Expand list width based on content
-  ._coral-BasicList-item-contentContainer {
-    width: auto;
-  }
-
-  button[is="coral-buttonlist-item"] {
-    width: 100%;
-  }
 }
 
 ._coral-QuickActions-item-more._coral-ActionButton,
